--- a/src/components/GroupTag/GroupTag.module.css
+++ b/src/components/GroupTag/GroupTag.module.css
@@ -21,6 +21,18 @@
   text-align: center !important;
   flex-shrink: 0 !important;
   box-sizing: border-box !important;
+  font-feature-settings: 'kern', 'liga', 'clig', 'calt' !important;
+  font-kerning: normal !important;
+  font-stretch: 100% !important;
+  font-style: normal !important;
+  font-variant-caps: normal !important;
+  font-variant-east-asian: normal !important;
+  font-variant-ligatures: normal !important;
+  font-variant-numeric: normal !important;
+  text-decoration: none !important;
+  text-decoration-thickness: auto !important;
+  text-size-adjust: 100% !important;
+  overflow-wrap: break-word !important;
 }
 
 .groupTagContainer::-webkit-scrollbar {
